<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <!-- vim: tabstop=4 softtabstop=0 expandtab shiftwidth=4 smarttab
    -->

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.discover</groupId>
    <artifactId>hydra</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>Test project for discover hydra</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.test.skip.exec>true</maven.test.skip.exec> <!-- disable surefire -->
        <cobertura.datafile>${project.basedir}/BUILD/run/ast/nodes/SSB1SWITCH/cobertura.ser</cobertura.datafile>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <compilerArgument>-Xlint:all</compilerArgument>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.tibco.ast</groupId>
                <artifactId>deploy-maven-plugin</artifactId>
                <configuration>
                    <domainName>Development</domainName>
                    <clientArguments>
                        <clientArgument>-Dcom.kabira.fluency.nodelist=${com.kabira.fluency.nodelist}</clientArgument>
                        <clientArgument>-XX:+UseCompressedOops</clientArgument>
                        <clientArgument>-XX:CompileThreshold=100</clientArgument>
                        <!-- <clientArgument>-ea</clientArgument> -->
                        <clientArgument>-Xloggc:gc.log</clientArgument>
                        <clientArgument>-XX:+PrintGCDateStamps</clientArgument>
                        <clientArgument>-XX:+PrintGCDetails</clientArgument>
                        <!-- <clientArgument>-XX:+UseParallelOldGC</clientArgument> -->
                        <clientArgument>-Dnet.sourceforge.cobertura.datafile=cobertura.ser</clientArgument>
                    </clientArguments>
                </configuration>
                <executions>
                    <execution>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <!-- this would normally go in a common parent pom -->
        <pluginManagement>
            <plugins>
                <!-- TIBCO -->
                <plugin>
                    <groupId>com.tibco.ast</groupId>
                    <artifactId>deploy-maven-plugin</artifactId>
                    <version>1.5.1</version>
                </plugin>

                <!-- others -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <!-- RELEASE repository -->
        <repository>
            <id>Release</id>
            <name>Release repository</name>
            <url>http://downloads.fluency.kabira.com/repositories/release</url>
        </repository>

        <!-- SNAPSHOT repository -->
        <repository>
            <id>Snapshot</id>
            <name>Snapshot repository</name>
            <url>http://downloads.fluency.kabira.com/repositories/snapshots</url>
        </repository>

        <!-- internal repository, needed for updated cobertura -->
        <repository>
            <id>3rdparty</id>
            <name>3rdparty repository</name>
            <url>http://nexus.tibco.com:8081/nexus/content/repositories/thirdparty/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.tibco</groupId>
            <artifactId>ast</artifactId>
        </dependency>
        <dependency>
            <groupId>com.tibco</groupId>
            <artifactId>haservice</artifactId>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.cobertura</groupId>
            <artifactId>cobertura</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- this would normally go in a common parent pom -->
    <dependencyManagement>
        <dependencies>
            <!-- TIBCO -->
            <dependency>
                <groupId>com.tibco</groupId>
                <artifactId>ast</artifactId>
                <version>2.5.1</version>
            </dependency>
            <dependency>
                <groupId>com.tibco</groupId>
                <artifactId>haservice</artifactId>
                <version>2.0.2</version>
            </dependency>
            <dependency>
                <groupId>net.sourceforge.cobertura</groupId>
                <artifactId>cobertura</artifactId>
                <version>2.1.1</version>
            </dependency>

            <!-- others -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
            </dependency>
        </dependencies>

    </dependencyManagement>

    <reporting>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.3</version>
                <configuration>
                    <linksource>true</linksource>
                    <sourcetab>4</sourcetab>
                    <show>private</show>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.8</version>
                <configuration>
                    <dependencyDetailsEnabled>true</dependencyDetailsEnabled>
                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
                    <linkOnly>true</linkOnly>
                </configuration>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>summary</report>
                            <report>dependencies</report>
                            <report>scm</report>
                            <report>issue-tracking</report>
                            <report>license</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <formats>
                        <format>xml</format>
                        <format>html</format>
                    </formats>
                </configuration>
            </plugin>

        </plugins>

    </reporting>
</project>
